apps/cat-game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-game
  namespace: cat-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-game
  template:
    metadata:
      labels:
        app: cat-game
    spec:
      containers:
        - name: cat-game
          image: ghcr.io/keco-studio/cat:dc2f1f88de031e7bc0b10d843fdb6065b9671240
          ports:
            - containerPort: 80
