apps/cat-game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-game
  namespace: cat-game
spec:
  selector:
    app: cat-game
  ports:
    - port: 80
      targetPort: 80
